feat: implement color crud
